Change the menu color to match the color of the menu text. This prevents the menu from not showing up, if the site and menu background are the same.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -670,11 +670,11 @@ header nav {
 						position: absolute;
 						width: 20px;
 						height: 3px;
-						background: @color-swatch6;
+						background: @color-swatch1;
 						top: 15px;
 						left: 50%;
 						margin-left: -10px;
-						box-shadow: 0 6px 0 @color-swatch6, 0 12px 0 @color-swatch6;
+						box-shadow: 0 6px 0 @color-swatch1, 0 12px 0 @color-swatch1;
 					}
 				}
 				@media @mobile {
